--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
-  "name": "hono",
-  "type": "module",
+  "name": "pollbns",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "hono": "^4.8.9"
+    "mysql2": "^3.15.3",
+    "next": "15.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/bun": "^1.3.1",
-    "typescript": "^5.8.3"
+    "@types/node": "20.17.5",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "eslint": "9.12.0",
+    "eslint-config-next": "15.1.0",
+    "typescript": "5.6.3"
   }
 }
