--- a/.env.local
+++ b/.env.local
@@ -8,3 +8,5 @@ DB_PORT=3306
 DB_USER=admin_shopdb
 DB_PASSWORD=x!Zf36e97
 DB_NAME=shopdbtython
+ADMIN_DASHBOARD_PASSWORD=12345678qaz!!
+ADMIN_COOKIE_NAME=poll_admin
